--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@
 
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/money.png" alt="money">
+                                <img src="img/portfolio/money.jpg" alt="money">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/bank.png" alt="bank">
+                                <img src="img/portfolio/bank.jpg" alt="bank">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/flower.png" alt="flower">
+                                <img src="img/portfolio/flower.jpg" alt="flower">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/card.png" alt="card">
+                                <img src="img/portfolio/card.jpg" alt="card">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
@@ -241,30 +241,28 @@
 
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/calc.png" alt="calculated">
+                                <img src="img/portfolio/calc.jpg" alt="calculated">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/euro.png" alt="euro">
+                                <img src="img/portfolio/euro.jpg" alt="euro">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/money2.png" alt="money">
+                                <img src="img/portfolio/money2.jpg" alt="money">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
                         <li class="gallery-one__item">
                             <a href="#">
-                                <img src="img/portfolio/сheck.png" alt="сheck">
+                                <img src="img/portfolio/сheck.jpg" alt="сheck">
                                 <p class="gallery-one__text">design name</p>
                             </a>
                         </li>
-
-
                     </ul>
                 </div>
             </div>
